# SleepyDreamyV3

./: .gitignore  GEMINI.md  README.md  action_handling_refactor.md  config.yaml  ongoing.md  pyproject.toml  pyrightconfig.json  tensor_normalization_examples.py  test_dynamic_config.py  test_plans.md  test_trainer_utils.py  verify_env_refactor.py  verify_refactor.py
SleepyDreamy/: enviornment.py  main.py  world_model.py
runs/: events.out.tfevents.1763551269.j.626658.0
src/: config.py  decoder.py  encoder.py  environment.py  lunar_lander.py  main.py  trainer.py  trainer_utils.py  visualize_environment.py  world_model.py  world_model_trainer.py
tests/: test_components.py  test_data.py  test_dynamic_config.py  test_encoder.py  test_gru.py  test_rssm.py  test_trainer_utils.py
