[project]
name = "sleepydreamyv3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[box2d]>=1.2.1",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "swig>=4.3.1.post0",
]
