[project]
name = "sleepydreamyv3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[box2d]>=1.2.1",
    "h5py>=3.15.1",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "swig>=4.3.1.post0",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
]
